# PythonNativeExample1

./: .gitignore  CMakeLists.txt  Setup.py  main.cpp
example/: example-initialization.cpp
example/classes/Classy/: Classy-description.cpp  Classy-impl.cpp  Classy.cpp
